Closed Bug 1228909 Opened 10 years ago Closed 10 years ago

Fix PDU packing in |ClientSetAdvDataCmd| for GATT API.

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox45 fixed)

RESOLVED FIXED
2.6 S2 - 12/4
Tracking Status
firefox45 --- fixed

People

(Reporter: yrliou, Assigned: yrliou)

References

Details

Attachments

(1 file, 1 obsolete file)

PDU packing in |ClientSetAdvDataCmd| is not consistent with bluetoothd at this moment.
Comment on attachment 8693419 [details] [diff] [review] Bug 1228909 - Fix PDU packing in |ClientSetAdvDataCmd| for GATT API. Review of attachment 8693419 [details] [diff] [review]: ----------------------------------------------------------------- LGTM
Attachment #8693419 - Flags: review?(brsun) → review+
Thanks for your time, Bruce.
Attachment #8693419 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.6 S2 - 12/4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: