Bug 1228909 - Fix PDU packing in |ClientSetAdvDataCmd| for GATT API. r=brsun